<resources>
    <string name="app_name">Zenxes Spa (r)</string>
    <string name="google_maps_key">AIzaSyBgLMQ8wvy5yda0qP1_8y1e_aJJ_HrTdZw</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_you_have_account">Already you have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_your_new_account">Create\nYour New\nAccount!</string>
    <string name="please_enter_5_digit_code_sent_to_email">Please Enter 5 Digit Code Sent\nTo Email</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="couple_massage">Couple Massage</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="online">Online</string>
    <string name="_9896989698">9896989698</string>
    <string name="vip_clients">VIP Clients</string>
    <string name="service_categories">Service Categories</string>
    <string name="product_categories">Product Categories</string>
    <string name="search_here">Search here</string>
    <string name="select_professional">Select Professional</string>
    <string name="maximum_availability">Maximum availability</string>
    <string name="any_professional">Any professional</string>
    <string name="no_data_found">No Data Found</string>
    <string name="team">Team</string>
    <string name="select_service">Select Service</string>
    <string name="my_cart">My Cart</string>
    <string name="select_date_and_time">Select date and time</string>
    <string name="home_delivery">Home delivery</string>
    <string name="at_venue">At venue</string>
    <string name="image_description">Image Description</string>
    <string name="add_address">Add Address</string>
    <string name="live_location">Live Location</string>
    <string name="enter_complete_address">Enter Complete Address</string>
    <string name="address">Address</string>
    <string name="other">Other</string>
    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="save_address_as">Save address as*</string>
    <string name="edit_complete_address">Edit complete address</string>
    <string name="receivers_name">Receivers name*</string>
    <string name="receivers_phone_no">Receivers Phone No*</string>
    <string name="enter_house_flat_block_no">Enter House / Flat / Block No.*</string>
    <string name="street_address">Street Address*</string>
    <string name="delete">Delete</string>
    <string name="my_appointment">My Appointment</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="request">Request</string>
    <string name="description">Description</string>
    <string name="tittle">Tittle</string>
    <string name="request_to_management">Request to Management</string>
    <string name="select_specialities">Select Specialities</string>
    <string name="email_or_phone_no">Email or Phone no</string>
    <string name="last_seen">Last Seen</string>
    <string name="sender_messages_here">Sender Messages here</string>
    <string name="time">time</string>
    <string name="write_a_message">Write a message</string>
    <string name="receiver_messages_here">Receiver Messages here</string>
    <string name="report">Report</string>
    <string name="please_unblock_first_to_chat_with_this_user">Please unblock first to chat with this user ?</string>
    <string name="unblock">UnBlock</string>
    <string name="block">block</string>
    <string name="cancel">Cancel</string>
    <string name="this_user_have_blocked_you">This user have blocked you !</string>
    <string name="block_user">Block User</string>
    <string name="message">Message</string>
    <string name="no_user_exists">No user exists!</string>
    <string name="payment">Payment</string>
    <string name="proceed">Proceed</string>
    <string name="no_appointment_found">No appointment found</string>
    <string name="are_you_sure_you_want_to_cancel_your_registration_for_this_event">Are you sure you want to cancel your registration for this event?</string>
    <string name="events">Events</string>
    <string name="register">Register</string>
</resources>