<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="ItemAlertPayment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4F959595">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="Payment Mode"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/paymentMethodGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:orientation="vertical">


                    <RadioButton
                        android:id="@+id/rbOnlinePayment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/app_color"
                        android:checked="true"
                        android:text="@string/online" />

                    <RadioButton
                        android:id="@+id/rbAtVenuePayment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/app_color"
                        android:text="@string/at_venue" />

                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    android:layout_marginTop="@dimen/_8sdp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvProceed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/proceed"
                        android:textColor="@color/green_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvCancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/cancel"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>