<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_bg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivArrowBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:onClick="@{onClick}"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeaderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/add_address"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                app:fontFamily="@font/poppins_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/txtImgLL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clHeader"
            tools:context="ui.customerDashboard.fragment.map.MapFragment"
            tools:ignore="FragmentTagUsage" />

        <ImageView
            android:id="@+id/ivMapMarker"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/home_delivery"
            android:src="@drawable/live_location"
            app:layout_constraintBottom_toBottomOf="@+id/map"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintStart_toStartOf="@+id/map"
            app:layout_constraintTop_toTopOf="@+id/map" />


        <LinearLayout
            android:id="@+id/txtImgLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/locationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/live_location"
                android:textAlignment="center"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toTopOf="@id/btnEnterAddress"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEnterAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:backgroundTint="@color/app_color"
                android:clickable="true"
                android:elevation="@dimen/_4sdp"
                android:focusable="true"
                android:onClick="@{onClick}"
                android:fontFamily="@font/poppins"
                android:padding="12sp"
                android:text="@string/enter_complete_address"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_45sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationText"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>