<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data >
    <variable
        name="onClick"
        type="android.view.View.OnClickListener" />
</data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_bg"
        tools:context=".ui.professionalDashboard.fragment.requestToManagement.RequestToManagementFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivDrawer"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/drawer"
                android:onClick="@{onClick}"
                android:tint="@color/white"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/request_to_management"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                app:fontFamily="@font/poppins_semibold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivRequestToManagement"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:onClick="@{onClick}"
                android:src="@drawable/ic_request_management"
                android:tint="@color/black"
                android:layout_marginEnd="@dimen/_6sdp"
                app:tint="@color/white"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/spinner_background"
            app:layout_constraintTop_toBottomOf="@+id/clHeader"
          >
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:paddingStart="@dimen/_3sdp"
                android:background="@drawable/spinner_background"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDropDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintTop_toTopOf="@+id/clSpinner"
            app:layout_constraintBottom_toBottomOf="@+id/clSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_edittext_request"
            android:elevation="@dimen/_2sdp"
            android:hint="@string/tittle"
            android:visibility="gone"
            android:padding="@dimen/_8sdp"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/clSpinner"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
            tools:layout_editor_absoluteX="21dp" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext_request"
            android:padding="@dimen/_8sdp"
            android:hint="@string/description"
            android:minLines="7"
            android:maxLines="7"
            android:gravity="start"
            android:elevation="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/etTittle"
            tools:ignore="VisualLintTextFieldSize" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:onClick="@{onClick}"
            android:paddingHorizontal="@dimen/_60sdp"
            android:text="@string/request"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescription"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>