<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalG1"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03163017" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalG1End"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalG2"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalG2End"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

    <!--    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/message_profile_image"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:focusable="true"
            android:visibility="gone"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/place_holder"
            app:layout_constraintStart_toEndOf="@id/verticalG1"
            app:layout_constraintTop_toTopOf="parent" />-->

        <LinearLayout
            android:id="@+id/msgReceiverLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/verticalG1"
            app:layout_constraintEnd_toEndOf="@id/verticalG1End"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/msgReceiverCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardBackgroundColor="#fff"
                app:cardElevation="4dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/msgReceiverTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:text="@string/receiver_messages_here"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="RtlSymmetry" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/message_receiver_image_view"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:layout_marginTop="5dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/msgReceiverTV"
                app:layout_constraintStart_toStartOf="@id/verticalG1" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/msgTimeReceiverTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/time"
            android:textSize="@dimen/_9ssp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/verticalG1"
            app:layout_constraintTop_toBottomOf="@id/msgReceiverLL"
            />

        <LinearLayout
            android:id="@+id/msgSenderLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/verticalG2"
            app:layout_constraintStart_toStartOf="@id/verticalG2End"
            app:layout_constraintTop_toBottomOf="@id/msgTimeReceiverTV">

            <androidx.cardview.widget.CardView
                android:id="@+id/msgSenderCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginStart="3dp"
                app:cardBackgroundColor="@color/app_color"
                app:cardElevation="4dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/msgSenderTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/sender_messages_here"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RtlSymmetry,TextSizeCheck" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/message_sender_image_view"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:layout_margin="5dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:visibility="gone"
                android:layout_gravity="end"
                app:layout_constraintTop_toBottomOf="@id/msgSenderCV"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/msgTimeSenderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:fontFamily="@font/poppins"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="@dimen/_9ssp"
            app:layout_constraintEnd_toStartOf="@id/verticalG2"
            app:layout_constraintTop_toBottomOf="@id/msgSenderLL"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
